--- a/src/partials/commissions.html
+++ b/src/partials/commissions.html
@@ -1,6 +1,12 @@
 <section id="commissions" class="commissions">
-  <div class="container">
-    <div class="commissions-container">
+  <div class="wrapper">
+    <img
+      src="/images/smoke-left-bg.png"
+      alt="Our goal illustration"
+      class="commissions-smoke"
+    />
+    <div class="container">
+      <!-- <div class="commissions-container"> -->
       <h2 class="title title-commissions">
         Commissions <span>Structures</span>
       </h2>
