--- a/src/partials/cookie.html
+++ b/src/partials/cookie.html
@@ -1,8 +1,11 @@
 <div class="cookie-popup" id="cookiePopup">
-  <div class="cookie-icon">
-    <img src="/images/cookies.png" alt="cookies" />
+  <div class="wrap-title-icon">
+    <div class="cookie-icon">
+      <img src="/images/cookies.png" alt="cookies" />
+    </div>
+    <h2 class="cookie-title">This website uses cookies</h2>
   </div>
-  <h2 class="cookie-title">This website uses cookies</h2>
+
   <p class="cookie-text">
     We use cookies to improve your browsing experience, analyze site traffic,
     and personalize content. By continuing to use our site, you agree to our use
