--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -3,11 +3,17 @@
     <div class="wrapper-hero-text">
       <h1 class="gold-text hero-title">TwoCards Partners</h1>
       <p class="hero-text">Turn your traffic into profit</p>
-      <button class="btn-primary btn-start" type="button">Let's start</button>
+      <a
+        href="#"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="btn-primary btn-start"
+        >Let's start</a
+      >
     </div>
     <div class="hero-img-wrap">
       <picture>
-        <source srcset="/images/hero-img.png" media="(min-width: 1000px)" />
+        <source srcset="/images/hero-img.png" media="(min-width: 1110px)" />
         <img
           src="/images/hero-img-phone-two.png"
           alt="Casino characters"
