--- a/src/partials/our-advantages.html
+++ b/src/partials/our-advantages.html
@@ -1,119 +1,126 @@
 <section id="advantages" class="advantages">
-  <div class="container">
-    <div class="advantages-container">
-      <h2 class="title">Our Advantages</h2>
+  <div class="wrapper">
+    <img
+      src="/images/smoke-right-bg.png"
+      alt="Our goal illustration"
+      class="advantages-smoke"
+    />
+    <div class="container">
+      <div class="advantages-container">
+        <h2 class="title">Our Advantages</h2>
 
-      <ul class="advantages-list">
-        <li class="advantages-item">
-          <img
-            src="/images/advantages-сoin.png"
-            alt="Coin"
-            class="advantages-icon"
-          />
-          <div class="wrap-title-text">
-            <h3 class="advantages-subtitle">
-              Fast, Secure, and Instant Payouts
-            </h3>
+        <ul class="advantages-list">
+          <li class="advantages-item">
+            <img
+              src="/images/advantages-coin.png"
+              alt="Coin"
+              class="advantages-icon"
+            />
+            <div class="wrap-title-text">
+              <h3 class="advantages-subtitle">
+                Fast, Secure, and Instant Payouts
+              </h3>
 
-            <p class="advantages-text">
-              We offer reliable, partner-friendly payout solutions, including
-              USDT, BTC, and local bank transfers. With multiple withdrawal
-              options and zero delays, you're always in control of your earnings
-              — efficiently and securely.
+              <p class="advantages-text">
+                We offer reliable, partner-friendly payout solutions, including
+                USDT, BTC, and local bank transfers. With multiple withdrawal
+                options and zero delays, you're always in control of your
+                earnings — efficiently and securely.
+              </p>
+            </div>
+          </li>
+
+          <li class="advantages-item">
+            <img
+              src="/images/advantages-rocket.png"
+              alt="Rocket"
+              class="advantages-icon"
+            />
+            <div class="wrap-title-text">
+              <h3 class="advantages-subtitle">
+                Boost Your Marketing Power with Smarter Tools
+              </h3>
+
+              <p class="advantages-text">
+                Unlock high-performing marketing tools: premium banners,
+                conversion-optimized landing pages, and tracking links — all
+                ready for testing. Combined with real-time analytics, our tools
+                help you optimize your strategy and boost ROI at every step.
+              </p>
+            </div>
+          </li>
+
+          <li class="advantages-item">
+            <img
+              src="/images/advantages-cards.png"
+              alt="Cards"
+              class="advantages-icon"
+            />
+            <div class="wrap-title-text">
+              <h3 class="advantages-subtitle">
+                Casino and Betting — United for Maximum Profit
+              </h3>
+
+              <p class="advantages-text">
+                TwoCards Partners is a place where Casino and Betting come
+                together to deliver more entertainment, and more profit. Make
+                money, enjoy the process, and grow with us.
+              </p>
+            </div>
+          </li>
+
+          <li class="advantages-item">
+            <img
+              src="/images/advantages-percent.png"
+              alt="Percent"
+              class="advantages-icon"
+            />
+            <div class="wrap-title-text">
+              <h3 class="advantages-subtitle">
+                Expand Your Network — and Your Income
+              </h3>
+
+              <p class="advantages-text">
+                Boost your income by referring other webmasters to the TwoCards
+                Partners Program. Earn 5% of their revenue and grow your
+                commissions while building a powerful, success-driven affiliate
+                network.
+              </p>
+            </div>
+          </li>
+
+          <li class="advantages-item">
+            <img
+              src="/images/advantages-star.png"
+              alt="Star"
+              class="advantages-icon"
+            />
+            <div class="wrap-title-text">
+              <h3 class="advantages-subtitle">
+                We Support Your Every Step to Success
+              </h3>
+
+              <p class="advantages-text">
+                No automation. No templates. Just real affiliate managers
+                focused on your success — customizing deals, optimizing tools,
+                and boosting your results. You're always supported
+              </p>
+            </div>
+          </li>
+
+          <li class="advantages-item advantages-item--footer">
+            <h3 class="gold-text advantages-footer-title">TwoCards Partners</h3>
+            <p class="advantages-footer-text">
+              Ready to grow with us? Let's talk strategy, commissions, and
+              custom deals.
             </p>
-          </div>
-        </li>
-
-        <li class="advantages-item">
-          <img
-            src="/images/advantages-rocket.png"
-            alt="Rocket"
-            class="advantages-icon"
-          />
-          <div class="wrap-title-text">
-            <h3 class="advantages-subtitle">
-              Boost Your Marketing Power with Smarter Tools
-            </h3>
-
-            <p class="advantages-text">
-              Unlock high-performing marketing tools: premium banners,
-              conversion-optimized landing pages, and tracking links — all ready
-              for testing. Combined with real-time analytics, our tools help you
-              optimize your strategy and boost ROI at every step.
+            <p class="advantages-footer-subtext">
+              Trusted by 1000+ affiliates worldwide 🌍
             </p>
-          </div>
-        </li>
-
-        <li class="advantages-item">
-          <img
-            src="/images/advantages-cards.png"
-            alt="Cards"
-            class="advantages-icon"
-          />
-          <div class="wrap-title-text">
-            <h3 class="advantages-subtitle">
-              Casino and Betting — United for Maximum Profit
-            </h3>
-
-            <p class="advantages-text">
-              TwoCards Partners is a place where Casino and Betting come
-              together to deliver more entertainment, and more profit. Make
-              money, enjoy the process, and grow with us.
-            </p>
-          </div>
-        </li>
-
-        <li class="advantages-item">
-          <img
-            src="/images/advantages-percent.png"
-            alt="Percent"
-            class="advantages-icon"
-          />
-          <div class="wrap-title-text">
-            <h3 class="advantages-subtitle">
-              Expand Your Network — and Your Income
-            </h3>
-
-            <p class="advantages-text">
-              Boost your income by referring other webmasters to the TwoCards
-              Partners Program. Earn 5% of their revenue and grow your
-              commissions while building a powerful, success-driven affiliate
-              network.
-            </p>
-          </div>
-        </li>
-
-        <li class="advantages-item">
-          <img
-            src="/images/advantages-star.png"
-            alt="Star"
-            class="advantages-icon"
-          />
-          <div class="wrap-title-text">
-            <h3 class="advantages-subtitle">
-              We Support Your Every Step to Success
-            </h3>
-
-            <p class="advantages-text">
-              No automation. No templates. Just real affiliate managers focused
-              on your success — customizing deals, optimizing tools, and
-              boosting your results. You're always supported
-            </p>
-          </div>
-        </li>
-
-        <li class="advantages-item advantages-item--footer">
-          <h3 class="gold-text advantages-footer-title">TwoCards Partners</h3>
-          <p class="advantages-footer-text">
-            Ready to grow with us? Let's talk strategy, commissions, and custom
-            deals.
-          </p>
-          <p class="advantages-footer-subtext">
-            Trusted by 1000+ affiliates worldwide 🌍
-          </p>
-          <a href="#contact" class="btn-primary btn-contact">Contact Us</a>
-        </li>
-      </ul>
+            <a href="#contact" class="btn-primary btn-contact">Contact Us</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </section>
