--- a/src/partials/our-goal.html
+++ b/src/partials/our-goal.html
@@ -1,26 +1,33 @@
 <section id="goal" class="goal">
-  <div class="container">
-    <div class="goal-container">
-      <div class="goal-wrapper-text">
-        <h2 class="title goal-title">Our Goal</h2>
-        <p class="text">
-          Is to build long-term,<span>win-win</span> partnerships based on
-          <span>trust</span>, transparency, and mutual <span>growth</span>.
-        </p>
-        <p class="text">
-          <span>Your success</span> is our success — we’re here to support you
-          every step of the way.
-        </p>
-      </div>
-      <div class="goal-wrapper-img">
-        <picture>
-          <source srcset="/images/our-goal.png" media="(min-width: 1110px)" />
-          <img
-            src="/images/our-goal-phone.png"
-            alt="Our goal illustration"
-            class="goal-img"
-          />
-        </picture>
+  <div class="wrapper">
+    <img
+      src="/images/smoke-left-bg.png"
+      alt="Our goal illustration"
+      class="goal-smoke"
+    />
+    <div class="container">
+      <div class="goal-container">
+        <div class="goal-wrapper-text">
+          <h2 class="title goal-title">Our Goal</h2>
+          <p class="text">
+            Is to build long-term,<span>win-win</span> partnerships based on
+            <span>trust</span>, transparency, and mutual <span>growth</span>.
+          </p>
+          <p class="text">
+            <span>Your success</span> is our success — we’re here to support you
+            every step of the way.
+          </p>
+        </div>
+        <div class="goal-wrapper-img">
+          <picture>
+            <source srcset="/images/our-goal.png" media="(min-width: 1110px)" />
+            <img
+              src="/images/our-goal-phone.png"
+              alt="Our goal illustration"
+              class="goal-img"
+            />
+          </picture>
+        </div>
       </div>
     </div>
   </div>
