--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -1,115 +1,122 @@
 <section id="testimonials" class="testimonials">
-  <div class="container">
-    <h2 class="title">Testimonials</h2>
-    <div class="testimonials-wrapper">
-      <div class="swiper testimonials-swiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide testimonials-slide">
-            <h3 class="testimonials-name">Name</h3>
-            <p class="testimonials-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
-            <div class="testimonials-logo">
-              <span class="testimonials-logo-text">LOGO</span>
+  <div class="wrapper">
+    <img
+      src="/images/smoke-right-bg.png"
+      alt="Our goal illustration"
+      class="testimonials-smoke"
+    />
+    <div class="container">
+      <h2 class="title">Testimonials</h2>
+      <div class="testimonials-wrapper">
+        <div class="swiper testimonials-swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide testimonials-slide">
+              <h3 class="testimonials-name">Name</h3>
+              <p class="testimonials-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat.
+              </p>
+              <div class="testimonials-logo">
+                <span class="testimonials-logo-text">LOGO</span>
+              </div>
             </div>
-          </div>
 
-          <div class="swiper-slide testimonials-slide">
-            <h3 class="testimonials-name">Name</h3>
-            <p class="testimonials-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
-            <div class="testimonials-logo">
-              <span class="testimonials-logo-text">LOGO</span>
+            <div class="swiper-slide testimonials-slide">
+              <h3 class="testimonials-name">Name</h3>
+              <p class="testimonials-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat.
+              </p>
+              <div class="testimonials-logo">
+                <span class="testimonials-logo-text">LOGO</span>
+              </div>
             </div>
-          </div>
 
-          <div class="swiper-slide testimonials-slide">
-            <h3 class="testimonials-name">Name</h3>
-            <p class="testimonials-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
-            <div class="testimonials-logo">
-              <span class="testimonials-logo-text">LOGO</span>
+            <div class="swiper-slide testimonials-slide">
+              <h3 class="testimonials-name">Name</h3>
+              <p class="testimonials-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat.
+              </p>
+              <div class="testimonials-logo">
+                <span class="testimonials-logo-text">LOGO</span>
+              </div>
             </div>
-          </div>
 
-          <div class="swiper-slide testimonials-slide">
-            <h3 class="testimonials-name">Name</h3>
-            <p class="testimonials-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
-            <div class="testimonials-logo">
-              <span class="testimonials-logo-text">LOGO</span>
+            <div class="swiper-slide testimonials-slide">
+              <h3 class="testimonials-name">Name</h3>
+              <p class="testimonials-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat.
+              </p>
+              <div class="testimonials-logo">
+                <span class="testimonials-logo-text">LOGO</span>
+              </div>
             </div>
-          </div>
 
-          <div class="swiper-slide testimonials-slide">
-            <h3 class="testimonials-name">Name</h3>
-            <p class="testimonials-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
-            <div class="testimonials-logo">
-              <span class="testimonials-logo-text">LOGO</span>
+            <div class="swiper-slide testimonials-slide">
+              <h3 class="testimonials-name">Name</h3>
+              <p class="testimonials-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat.
+              </p>
+              <div class="testimonials-logo">
+                <span class="testimonials-logo-text">LOGO</span>
+              </div>
             </div>
-          </div>
 
-          <div class="swiper-slide testimonials-slide">
-            <h3 class="testimonials-name">Name</h3>
-            <p class="testimonials-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
-            <div class="testimonials-logo">
-              <span class="testimonials-logo-text">LOGO</span>
+            <div class="swiper-slide testimonials-slide">
+              <h3 class="testimonials-name">Name</h3>
+              <p class="testimonials-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat.
+              </p>
+              <div class="testimonials-logo">
+                <span class="testimonials-logo-text">LOGO</span>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="swiper-button-prev">
-        <svg
-          width="20"
-          height="20"
-          viewBox="0 0 20 20"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M3.2656 9.75856C3.22131 9.7868 3.18485 9.82574 3.1596 9.8718C3.13434 9.91786 3.1211 9.96953 3.1211 10.0221C3.1211 10.0746 3.13434 10.1263 3.1596 10.1723C3.18485 10.2184 3.22131 10.2573 3.2656 10.2856L16.5188 18.7351C16.5601 18.7613 16.6092 18.7726 16.6578 18.7673C16.7065 18.7619 16.7519 18.7402 16.7866 18.7057C16.8214 18.6712 16.8434 18.626 16.849 18.5774C16.8547 18.5287 16.8437 18.4796 16.8178 18.4381L11.7096 10.3071C11.656 10.2217 11.6275 10.1229 11.6275 10.0221C11.6275 9.92124 11.656 9.82246 11.7096 9.73707L16.8305 1.58589C16.9783 1.35062 16.7635 1.15299 16.592 1.26233L3.2656 9.75856Z"
-            fill="white"
-          />
-        </svg>
-      </div>
-      <div class="swiper-button-next">
-        <svg
-          width="20"
-          height="20"
-          viewBox="0 0 20 20"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M16.7344 10.2414C16.7787 10.2132 16.8151 10.1743 16.8404 10.1282C16.8657 10.0821 16.8789 10.0305 16.8789 9.97794C16.8789 9.92541 16.8657 9.87373 16.8404 9.82767C16.8151 9.78162 16.7787 9.74267 16.7344 9.71443L3.48123 1.26488C3.43985 1.23873 3.39082 1.2274 3.34216 1.23274C3.2935 1.23807 3.24809 1.25977 3.21336 1.29426C3.17863 1.32876 3.15664 1.37403 3.15098 1.42265C3.14531 1.47127 3.15632 1.52038 3.18219 1.56193L8.29039 9.69292C8.34403 9.77831 8.37249 9.87709 8.37249 9.97792C8.37249 10.0788 8.34403 10.1775 8.29039 10.2629L3.16951 18.4141C3.0217 18.6494 3.23652 18.847 3.40802 18.7377L16.7344 10.2414Z"
-            fill="white"
-          />
-        </svg>
+        <div class="swiper-button-prev">
+          <svg
+            width="20"
+            height="20"
+            viewBox="0 0 20 20"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M3.2656 9.75856C3.22131 9.7868 3.18485 9.82574 3.1596 9.8718C3.13434 9.91786 3.1211 9.96953 3.1211 10.0221C3.1211 10.0746 3.13434 10.1263 3.1596 10.1723C3.18485 10.2184 3.22131 10.2573 3.2656 10.2856L16.5188 18.7351C16.5601 18.7613 16.6092 18.7726 16.6578 18.7673C16.7065 18.7619 16.7519 18.7402 16.7866 18.7057C16.8214 18.6712 16.8434 18.626 16.849 18.5774C16.8547 18.5287 16.8437 18.4796 16.8178 18.4381L11.7096 10.3071C11.656 10.2217 11.6275 10.1229 11.6275 10.0221C11.6275 9.92124 11.656 9.82246 11.7096 9.73707L16.8305 1.58589C16.9783 1.35062 16.7635 1.15299 16.592 1.26233L3.2656 9.75856Z"
+              fill="white"
+            />
+          </svg>
+        </div>
+        <div class="swiper-button-next">
+          <svg
+            width="20"
+            height="20"
+            viewBox="0 0 20 20"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M16.7344 10.2414C16.7787 10.2132 16.8151 10.1743 16.8404 10.1282C16.8657 10.0821 16.8789 10.0305 16.8789 9.97794C16.8789 9.92541 16.8657 9.87373 16.8404 9.82767C16.8151 9.78162 16.7787 9.74267 16.7344 9.71443L3.48123 1.26488C3.43985 1.23873 3.39082 1.2274 3.34216 1.23274C3.2935 1.23807 3.24809 1.25977 3.21336 1.29426C3.17863 1.32876 3.15664 1.37403 3.15098 1.42265C3.14531 1.47127 3.15632 1.52038 3.18219 1.56193L8.29039 9.69292C8.34403 9.77831 8.37249 9.87709 8.37249 9.97792C8.37249 10.0788 8.34403 10.1775 8.29039 10.2629L3.16951 18.4141C3.0217 18.6494 3.23652 18.847 3.40802 18.7377L16.7344 10.2414Z"
+              fill="white"
+            />
+          </svg>
+        </div>
       </div>
     </div>
   </div>
