--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -1,89 +1,96 @@
 <section id="faq" class="faq">
-  <div class="container">
-    <h2 class="title">FAQ</h2>
-    <p class="subtitle">
-      Need help? Check out our most frequently asked questions.
-    </p>
+  <div class="wrapper">
+    <img
+      src="/images/smoke-left-footer-bg.png"
+      alt="Our goal illustration"
+      class="faq-smoke"
+    />
+    <div class="container">
+      <h2 class="title">FAQ</h2>
+      <p class="subtitle faq-subtitle">
+        Need help? Check out our most frequently asked questions.
+      </p>
 
-    <ul class="faq-list">
-      <li class="faq-item">
-        <button class="faq-question">
-          <span class="faq-question-text">How fast can I get approved?</span>
-          <span class="faq-icon">
-            <svg
-              width="12"
-              height="12"
-              viewBox="0 0 12 12"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M10.414 6.40622C10.4406 6.38927 10.4625 6.3659 10.4776 6.33827C10.4928 6.31064 10.5007 6.27963 10.5007 6.24811C10.5007 6.21659 10.4928 6.18558 10.4776 6.15795C10.4625 6.13031 10.4406 6.10694 10.414 6.09L2.4618 1.02006C2.43697 1.00437 2.40755 0.997571 2.37835 1.00077C2.34915 1.00398 2.3219 1.01699 2.30107 1.03769C2.28023 1.05839 2.26703 1.08555 2.26363 1.11473C2.26024 1.1439 2.26684 1.17337 2.28236 1.1983L5.34741 6.07709C5.37959 6.12833 5.39667 6.1876 5.39667 6.2481C5.39667 6.3086 5.37959 6.36788 5.34741 6.41911L2.27476 11.31C2.18607 11.4512 2.31496 11.5698 2.41787 11.5042L10.414 6.40622Z"
-                fill="white"
-              />
-            </svg>
-          </span>
-        </button>
-        <div class="faq-answer">
-          <p class="faq-answer-text">
-            Our approval process typically takes 24-48 hours. Once you submit
-            your application, our team will review it and get back to you as
-            soon as possible.
-          </p>
-        </div>
-      </li>
+      <ul class="faq-list">
+        <li class="faq-item">
+          <button class="faq-question">
+            <span class="faq-question-text">How fast can I get approved?</span>
+            <span class="faq-icon">
+              <svg
+                width="12"
+                height="12"
+                viewBox="0 0 12 12"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M10.414 6.40622C10.4406 6.38927 10.4625 6.3659 10.4776 6.33827C10.4928 6.31064 10.5007 6.27963 10.5007 6.24811C10.5007 6.21659 10.4928 6.18558 10.4776 6.15795C10.4625 6.13031 10.4406 6.10694 10.414 6.09L2.4618 1.02006C2.43697 1.00437 2.40755 0.997571 2.37835 1.00077C2.34915 1.00398 2.3219 1.01699 2.30107 1.03769C2.28023 1.05839 2.26703 1.08555 2.26363 1.11473C2.26024 1.1439 2.26684 1.17337 2.28236 1.1983L5.34741 6.07709C5.37959 6.12833 5.39667 6.1876 5.39667 6.2481C5.39667 6.3086 5.37959 6.36788 5.34741 6.41911L2.27476 11.31C2.18607 11.4512 2.31496 11.5698 2.41787 11.5042L10.414 6.40622Z"
+                  fill="white"
+                />
+              </svg>
+            </span>
+          </button>
+          <div class="faq-answer">
+            <p class="faq-answer-text">
+              Our approval process typically takes 24-48 hours. Once you submit
+              your application, our team will review it and get back to you as
+              soon as possible.
+            </p>
+          </div>
+        </li>
 
-      <li class="faq-item">
-        <button class="faq-question">
-          <span class="faq-question-text">What is the minimum payout?</span>
-          <span class="faq-icon">
-            <svg
-              width="12"
-              height="12"
-              viewBox="0 0 12 12"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M10.414 6.40622C10.4406 6.38927 10.4625 6.3659 10.4776 6.33827C10.4928 6.31064 10.5007 6.27963 10.5007 6.24811C10.5007 6.21659 10.4928 6.18558 10.4776 6.15795C10.4625 6.13031 10.4406 6.10694 10.414 6.09L2.4618 1.02006C2.43697 1.00437 2.40755 0.997571 2.37835 1.00077C2.34915 1.00398 2.3219 1.01699 2.30107 1.03769C2.28023 1.05839 2.26703 1.08555 2.26363 1.11473C2.26024 1.1439 2.26684 1.17337 2.28236 1.1983L5.34741 6.07709C5.37959 6.12833 5.39667 6.1876 5.39667 6.2481C5.39667 6.3086 5.37959 6.36788 5.34741 6.41911L2.27476 11.31C2.18607 11.4512 2.31496 11.5698 2.41787 11.5042L10.414 6.40622Z"
-                fill="white"
-              />
-            </svg>
-          </span>
-        </button>
-        <div class="faq-answer">
-          <p class="faq-answer-text">100 USD / 100 USDT</p>
-        </div>
-      </li>
+        <li class="faq-item">
+          <button class="faq-question">
+            <span class="faq-question-text">What is the minimum payout?</span>
+            <span class="faq-icon">
+              <svg
+                width="12"
+                height="12"
+                viewBox="0 0 12 12"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M10.414 6.40622C10.4406 6.38927 10.4625 6.3659 10.4776 6.33827C10.4928 6.31064 10.5007 6.27963 10.5007 6.24811C10.5007 6.21659 10.4928 6.18558 10.4776 6.15795C10.4625 6.13031 10.4406 6.10694 10.414 6.09L2.4618 1.02006C2.43697 1.00437 2.40755 0.997571 2.37835 1.00077C2.34915 1.00398 2.3219 1.01699 2.30107 1.03769C2.28023 1.05839 2.26703 1.08555 2.26363 1.11473C2.26024 1.1439 2.26684 1.17337 2.28236 1.1983L5.34741 6.07709C5.37959 6.12833 5.39667 6.1876 5.39667 6.2481C5.39667 6.3086 5.37959 6.36788 5.34741 6.41911L2.27476 11.31C2.18607 11.4512 2.31496 11.5698 2.41787 11.5042L10.414 6.40622Z"
+                  fill="white"
+                />
+              </svg>
+            </span>
+          </button>
+          <div class="faq-answer">
+            <p class="faq-answer-text">100 USD / 100 USDT</p>
+          </div>
+        </li>
 
-      <li class="faq-item">
-        <button class="faq-question">
-          <span class="faq-question-text">Who are TwoCards Partners?</span>
-          <span class="faq-icon">
-            <svg
-              width="12"
-              height="12"
-              viewBox="0 0 12 12"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M10.414 6.40622C10.4406 6.38927 10.4625 6.3659 10.4776 6.33827C10.4928 6.31064 10.5007 6.27963 10.5007 6.24811C10.5007 6.21659 10.4928 6.18558 10.4776 6.15795C10.4625 6.13031 10.4406 6.10694 10.414 6.09L2.4618 1.02006C2.43697 1.00437 2.40755 0.997571 2.37835 1.00077C2.34915 1.00398 2.3219 1.01699 2.30107 1.03769C2.28023 1.05839 2.26703 1.08555 2.26363 1.11473C2.26024 1.1439 2.26684 1.17337 2.28236 1.1983L5.34741 6.07709C5.37959 6.12833 5.39667 6.1876 5.39667 6.2481C5.39667 6.3086 5.37959 6.36788 5.34741 6.41911L2.27476 11.31C2.18607 11.4512 2.31496 11.5698 2.41787 11.5042L10.414 6.40622Z"
-                fill="white"
-              />
-            </svg>
-          </span>
-        </button>
-        <div class="faq-answer">
-          <p class="faq-answer-text">
-            TwoCards Partners is a leading affiliate program for casino and
-            betting platforms. We provide top-tier marketing tools and
-            competitive commission structures.
-          </p>
-        </div>
-      </li>
-    </ul>
+        <li class="faq-item">
+          <button class="faq-question">
+            <span class="faq-question-text">Who are TwoCards Partners?</span>
+            <span class="faq-icon">
+              <svg
+                width="12"
+                height="12"
+                viewBox="0 0 12 12"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M10.414 6.40622C10.4406 6.38927 10.4625 6.3659 10.4776 6.33827C10.4928 6.31064 10.5007 6.27963 10.5007 6.24811C10.5007 6.21659 10.4928 6.18558 10.4776 6.15795C10.4625 6.13031 10.4406 6.10694 10.414 6.09L2.4618 1.02006C2.43697 1.00437 2.40755 0.997571 2.37835 1.00077C2.34915 1.00398 2.3219 1.01699 2.30107 1.03769C2.28023 1.05839 2.26703 1.08555 2.26363 1.11473C2.26024 1.1439 2.26684 1.17337 2.28236 1.1983L5.34741 6.07709C5.37959 6.12833 5.39667 6.1876 5.39667 6.2481C5.39667 6.3086 5.37959 6.36788 5.34741 6.41911L2.27476 11.31C2.18607 11.4512 2.31496 11.5698 2.41787 11.5042L10.414 6.40622Z"
+                  fill="white"
+                />
+              </svg>
+            </span>
+          </button>
+          <div class="faq-answer">
+            <p class="faq-answer-text">
+              TwoCards Partners is a leading affiliate program for casino and
+              betting platforms. We provide top-tier marketing tools and
+              competitive commission structures.
+            </p>
+          </div>
+        </li>
+      </ul>
 
-    <a href="./faq-page.html" class="btn-primary faq-button">More...</a>
+      <a href="./faq-page.html" class="btn-primary faq-button">More...</a>
+    </div>
   </div>
 </section>
