--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -10,18 +10,25 @@ body {
   font-size: 16px;
 }
 
-.container {
-  min-width: 320px;
-  // max-width: 1110px;
-  max-width: 425px; /*****************************/
+.wrapper {
+  position: relative;
   width: 100%;
+  max-width: 1920px;
+  margin: 0 auto;
+}
+
+.container {
+  position: relative;
+  width: 100%;
+  min-width: 320px;
+  max-width: 375px;
   margin: 0 auto;
   padding: 32px 16px;
 
   @include media(desktop) {
     // padding: 100px 0;
-    padding: 100px 16px; /**************************/
-    max-width: 1110px; /**************************/
+    padding: 100px 16px;
+    max-width: 1110px;
   }
 }
 
