--- a/src/scss/cookie.scss
+++ b/src/scss/cookie.scss
@@ -2,25 +2,23 @@
 
 .cookie-popup {
   position: fixed;
-  bottom: 0;
+  bottom: 16px;
   left: 50%;
   transform: translateX(-50%);
   padding: 16px;
   width: 343px;
-  height: 297px;
   border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 16px;
   backdrop-filter: blur(30px);
   background: rgba(0, 0, 0, 0.6);
   animation: slideUp 0.3s ease-out;
-  z-index: 7;
+  z-index: 9;
 
   @include media(desktop) {
     flex-direction: row;
     border: 1px solid rgba(255, 255, 255, 0.1);
-    border-radius: 16px;
     padding: 24px;
     width: 440px;
-    height: 319px;
     left: auto;
     right: 24px;
     bottom: 24px;
@@ -35,15 +33,24 @@
     transform: translateY(0);
   }
 }
+
+.wrap-title-icon {
+  display: flex;
+  align-items: center;
+  margin-bottom: 8px;
+  gap: 14px;
+
+  @include media(desktop) {
+    margin-bottom: 12px;
+  }
+}
 .cookie-icon {
   width: 40px;
   height: 40px;
-  margin-bottom: 8px;
 
   @include media(desktop) {
     width: 60px;
     height: 60px;
-    margin-bottom: 12px;
   }
 }
 .cookie-title {
@@ -52,11 +59,9 @@
   font-size: 18px;
   line-height: 1.2;
   color: $color-white;
-  margin-bottom: 8px;
 
   @include media(desktop) {
     font-size: 24px;
-    margin-bottom: 12px;
   }
 }
 .cookie-text {
