--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -5,8 +5,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 8;
-
+  z-index: 9;
   transition: background-color 0.25s ease, box-shadow 0.25s ease;
 }
 
@@ -28,7 +27,6 @@
   padding: 12px 30px;
 
   @include media(desktop) {
-    // padding: 20px 40px;
     padding: 20px 34px;
   }
 }
@@ -157,21 +155,16 @@
   &:hover {
     background: rgba(139, 92, 246, 0.1);
     padding-left: 12px;
-    // border-radius: 8px;
   }
 
   &:active {
     background: rgba(139, 92, 246, 0.1);
-    // background: rgba(139, 92, 246, 0.2);
-    // transform: scale(0.98);
-    // background-color: #1c1f22;
   }
 
   @include media(desktop) {
     border-bottom: none;
     padding: 0;
     gap: 0;
-    // cursor: default;
 
     &:hover {
       background: none;
@@ -183,11 +176,6 @@
       background: rgba(139, 92, 246, 0.2);
       transform: scale(0.98);
     }
-
-    // &:active {
-    //   background: none;
-    //   transform: none;
-    // }
   }
 }
 
@@ -200,6 +188,11 @@
   transition: all 300ms ease;
 
   .nav-item:hover & {
+    transform: scale(1.1);
+  }
+
+  .nav-item:has(.nav-link.active) & {
+    color: $color-white;
     transform: scale(1.1);
   }
 
@@ -218,8 +211,16 @@
   transition: all 300ms ease;
   flex: 1;
 
+  &.active {
+    color: $color-primary;
+
+    @include media(desktop) {
+      background-color: rgba(141, 67, 255, 0.2);
+    }
+  }
+
   .nav-item:hover & {
-    color: #8d43ff;
+    color: $color-primary;
   }
 
   @include media(desktop) {
@@ -230,15 +231,19 @@
     background-color: transparent;
 
     &:hover {
-      color: #8d43ff;
+      color: $color-primary;
       background-color: rgba(255, 255, 255, 0.1);
     }
   }
 }
 
 .burger-img {
+  position: absolute;
+  top: 40%;
+  left: 0;
   width: 100%;
   padding: 0 20px;
+  z-index: -1;
 
   img {
     width: 100%;
@@ -275,57 +280,18 @@
 
 .btn-login,
 .btn-register {
-  // font-family: $font-family;
-  // color: $color-white;
   font-weight: 700;
   font-size: 20px;
   width: 100%;
   padding: 14px 20px;
   border-radius: 100px;
 
-  // transition: all 300ms ease;
-  // white-space: nowrap;
-
   @include media(desktop) {
     width: auto;
     padding: 10px 28px;
     font-size: 14px;
   }
-
-  // &:active {
-  //   transform: scale(0.97);
-  // }
 }
-
-// .btn-login {
-//   background-color: #1c1f22;
-//   color: $color-white;
-//   border: 2px solid rgba(255, 255, 255, 0.1);
-
-//   &:hover {
-//     background-color: rgba(255, 255, 255, 0.1);
-//     transform: translateY(-3px);
-//   }
-// }
-
-// .btn-register {
-//   border: 2px solid rgba(255, 255, 255, 0.15);
-//   box-shadow: 0 0 30px 0 rgba(137, 53, 225, 0.5),
-//     0 6px 30px 0 rgba(69, 5, 183, 0.4), 0 4px 4px 0 rgba(48, 0, 134, 0.3),
-//     inset 4px 4px 10px 0 rgba(255, 255, 255, 0.45),
-//     inset -6px -4px 10px 0 rgba(0, 0, 0, 0.45);
-//   background: linear-gradient(135deg, #990aff 0%, #490eb7 100%);
-
-//   &:hover {
-//     transform: translateY(-3px);
-//   }
-
-//   @include media(desktop) {
-//     &:hover {
-//       transform: translateY(-3px);
-//     }
-//   }
-// }
 
 .hidden {
   display: none;
