--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -6,34 +6,24 @@
   background-position: center;
   background-repeat: no-repeat;
 
-  @include media(desktop) {
+  @include media(tablet) {
     background-image: url(/images/hero-bg.png);
   }
 }
 
 .hero-container {
   position: relative;
-
   margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
   padding-top: 60px;
   height: 700px;
-  // max-width: 1920px;
-
-  // background-image: url(/images/hero-bg-phone.png);
-  // background-size: cover;
-  // background-position: center;
-  // background-repeat: no-repeat;
 
   @include media(desktop) {
-    // background-image: url(/images/hero-bg.png);
-    // height: 900px;
     width: clamp(1110px, 100vw, 1920px);
     aspect-ratio: 1920 / 900;
     max-height: 900px;
-
     padding-top: 330px;
   }
 }
@@ -57,41 +47,27 @@
   line-height: 1.2;
   text-align: center;
   white-space: nowrap;
-  // background: linear-gradient(
-  //   90deg,
-  //   #d8940b 0%,
-  //   #eeb83a 35.1%,
-  //   #fff6a7 49.52%,
-  //   #dda41f 75.49%
-  // );
-  // background-clip: text;
-  // -webkit-background-clip: text;
-  // -webkit-text-fill-color: transparent;
-  // text-shadow: 4px 5px 10px 0 rgba(244, 208, 100, 0.3);
 
   @include media(desktop) {
-    // font-size: 70px;
     font-size: clamp(64px, 2.5vw, 70px);
   }
 }
+
 .hero-text {
   font-family: $second-family;
   font-weight: 600;
   font-size: 46px;
   line-height: 1;
   text-align: center;
-  color: #fff;
 
   @include media(desktop) {
     font-weight: 600;
-    // font-size: 70px;
     font-size: clamp(60px, 2.5vw, 70px);
-
-    line-height: 120%;
+    line-height: 1.2;
     text-align: center;
-    color: #fff;
   }
 }
+
 .btn-start {
   font-weight: 800;
   font-size: 15px;
@@ -99,24 +75,6 @@
   width: 344px;
   height: 50px;
   margin-top: 32px;
-
-  // font-family: $font-family;
-
-  // color: #fff;
-  // border: 2px solid rgba(255, 255, 255, 0.15);
-
-  // text-align: center;
-
-  // box-shadow: 0 0 30px 0 rgba(137, 53, 225, 0.5),
-  //   0 6px 30px 0 rgba(69, 5, 183, 0.4), 0 4px 4px 0 rgba(48, 0, 134, 0.3),
-  //   inset 4px 4px 10px 0 rgba(255, 255, 255, 0.45),
-  //   inset -6px -4px 10px 0 rgba(0, 0, 0, 0.45);
-  // background: linear-gradient(135deg, #990aff 0%, #490eb7 100%);
-  // transition: all 0.3s ease;
-
-  // &:hover {
-  //   transform: scale(0.96);
-  // }
 
   @include media(desktop) {
     font-size: 20px;
@@ -133,7 +91,6 @@
   transform: translate(50%, -50%);
 
   @include media(desktop) {
-    position: absolute;
     top: 0;
     right: 0;
     width: 100%;
@@ -141,6 +98,7 @@
     transform: none;
   }
 }
+
 .hero-img {
   width: 312px;
   height: 250px;
@@ -148,7 +106,6 @@
   @include media(desktop) {
     height: 100%;
     width: 100%;
-    // object-fit: cover;
     object-fit: contain;
   }
 }
