--- a/src/scss/our-advantages.scss
+++ b/src/scss/our-advantages.scss
@@ -1,21 +1,25 @@
 @use "./common/index" as *;
 
-.advantages {
-  // padding-top: 50px;
-  // padding-bottom: 50px;
+.advantages-smoke {
+  display: none;
 
   @include media(desktop) {
-    // padding-top: 100px;
-    // padding-bottom: 100px;
+    display: block;
+    pointer-events: none;
+    position: absolute;
+    right: 14px;
+    bottom: -260px;
+    width: 1176px;
+    height: 659px;
+    z-index: -1;
   }
 }
 
 .advantages-list {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
 
   @include media(desktop) {
-    display: grid;
     grid-template-columns: repeat(3, 1fr);
   }
 }
@@ -25,17 +29,42 @@
   padding: 16px;
   display: flex;
   gap: 10px;
-
   transition: all 0.3s ease;
 
+  &:first-child {
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+  }
+
+  &:last-child {
+    border-bottom-left-radius: 16px;
+    border-bottom-right-radius: 16px;
+  }
+
   &:hover {
-    border-color: #8d43ff;
+    border-color: $color-primary;
   }
 
   @include media(desktop) {
     flex-direction: column;
     padding: 24px;
     gap: 20px;
+
+    &:first-child {
+      border-top-right-radius: 0;
+    }
+
+    &:nth-child(3) {
+      border-top-right-radius: 16px;
+    }
+
+    &:nth-child(4) {
+      border-bottom-left-radius: 16px;
+    }
+
+    &:last-child {
+      border-bottom-left-radius: 0;
+    }
   }
 }
 
@@ -53,6 +82,10 @@
   flex-direction: column;
   text-align: center;
   gap: 12px;
+  background-image: url(/images/advantages-bg-6.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 
   @include media(desktop) {
     flex-direction: column;
@@ -100,17 +133,6 @@
   font-weight: 600;
   font-size: 20px;
   line-height: 1.2;
-  // background: linear-gradient(
-  //   90deg,
-  //   #d8940b 0%,
-  //   #eeb83a 35.1%,
-  //   #fff6a7 49.52%,
-  //   #dda41f 75.49%
-  // );
-  // background-clip: text;
-  // -webkit-background-clip: text;
-  // -webkit-text-fill-color: transparent;
-  // text-shadow: -1px -2px 10px 0 rgba(244, 208, 100, 0.4);
 
   @include media(desktop) {
     font-size: 32px;
@@ -146,29 +168,8 @@
   font-weight: 800;
   font-size: 15px;
   border-radius: 100px;
-  // width: 311px;
   width: 100%;
   height: 50px;
-  // font-family: $font-family;
-
-  // color: $color-white;
-
-  // border: 2px solid rgba(255, 255, 255, 0.15);
-
-  // box-shadow: 0 0 30px 0 rgba(137, 53, 225, 0.5),
-  //   0 6px 30px 0 rgba(69, 5, 183, 0.4), 0 4px 4px 0 rgba(48, 0, 134, 0.3),
-  //   inset 4px 4px 10px 0 rgba(255, 255, 255, 0.45),
-  //   inset -6px -4px 10px 0 rgba(0, 0, 0, 0.45);
-  // background: linear-gradient(135deg, #990aff 0%, #490eb7 100%);
-
-  // display: flex;
-  // align-items: center;
-  // justify-content: center;
-  // transition: all 0.3s ease;
-
-  // &:hover {
-  //   transform: translateY(-3px);
-  // }
 
   @include media(desktop) {
     font-size: 18px;
