--- a/src/scss/testimonials.scss
+++ b/src/scss/testimonials.scss
@@ -5,6 +5,21 @@
   }
 }
 
+.testimonials-smoke {
+  display: none;
+
+  @include media(desktop) {
+    display: block;
+    pointer-events: none;
+    position: absolute;
+    right: 0;
+    top: -40px;
+    width: 1176px;
+    height: 659px;
+    z-index: -1;
+  }
+}
+
 .testimonials-wrapper {
   position: relative;
   margin-top: 40px;
@@ -111,7 +126,7 @@
     background: #1c1f22;
     color: $color-white;
     transition: all 0.3s ease;
-    z-index: 10;
+    z-index: 8;
     cursor: pointer;
     margin: 0 !important;
 
