--- a/src/scss/testimonials.scss
+++ b/src/scss/testimonials.scss
@@ -130,6 +130,13 @@
     cursor: pointer;
     margin: 0 !important;
 
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -webkit-tap-highlight-color: transparent;
+    outline: none;
+
     &::after {
       content: none;
     }
