update header faq section

--- a/src/partials/faq-header.html
+++ b/src/partials/faq-header.html
@@ -1,5 +1,5 @@
 <section class="header-section">
-  <div class="header-container">
+  <div class="header-container faq-page-container">
     <a href="./index.html" class="logo-link">
       <picture>
         <source srcset="/images/logo-desktop.png" media="(min-width: 768px)" />
