--- a/src/partials/faq-page.html
+++ b/src/partials/faq-page.html
@@ -1,11 +1,11 @@
 <section id="faq" class="faq">
-  <div class="container">
+  <div class="container faq-page-container">
     <h1 class="title">FAQ</h1>
-    <p class="subtitle">
+    <p class="subtitle faq-subtitle">
       Need help? Check out our most frequently asked questions.
     </p>
 
-    <ul class="faq-list">
+    <ul class="faq-list faq-list-page">
       <li class="faq-item">
         <button class="faq-question">
           <span class="faq-question-text">How fast can I get approved?</span>
