--- a/src/scss/common/_index.scss
+++ b/src/scss/common/_index.scss
@@ -1,8 +1,6 @@
-// @forward "fonts";
-
-@forward './variables';
-@forward './mixins';
-@forward './breakpoints';
-@forward './reset';
-@forward './base';
-@forward './visually-hidden';
+@forward "./variables";
+@forward "./mixins";
+@forward "./breakpoints";
+@forward "./reset";
+@forward "./base";
+@forward "./visually-hidden";
