--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -53,7 +53,7 @@
   transition: color 0.3s ease;
 
   &:hover {
-    color: #a855f7;
+    color: $color-primary;
     text-decoration: underline;
   }
 }
