started adjusting adaptive

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -14,6 +14,10 @@
     <div class="hero-img-wrap">
       <picture>
         <source srcset="/images/hero-img.png" media="(min-width: 1110px)" />
+        <source
+          srcset="/images/hero-img-tablet.png"
+          media="(min-width: 768px)"
+        />
         <img
           src="/images/hero-img-phone-two.png"
           alt="Casino characters"
