--- a/src/scss/common/_reset.scss
+++ b/src/scss/common/_reset.scss
@@ -6,7 +6,7 @@ html {
 *::before,
 *::after {
   box-sizing: inherit;
-  // outline: orangered 1px solid; // debugger
+  // outline: red 1px solid; // debugger
 }
 
 body {
