--- a/src/scss/common/_variables.scss
+++ b/src/scss/common/_variables.scss
@@ -1,8 +1,9 @@
 $font-family: "Inter", sans-serif;
-// $second-family: "Oswald", sans-serif;
 $second-family: "Roboto Condensed", sans-serif;
 $third-family: "Roboto", sans-serif;
 
 $color-primary: #8d43ff;
 $color-white: #ffffff;
 $color-black: #0d0a0f;
+$color-gold: #d8940b;
+$color-red: #ff4444;
