--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -25,9 +25,16 @@ body {
   margin: 0 auto;
   padding: 32px 16px;
 
+  @include media(tablet) {
+    padding: 60px 16px;
+    min-width: 768px;
+    max-width: 768px;
+  }
+
   @include media(desktop) {
     padding: 100px 16px;
     max-width: 1110px;
+    min-width: 1110px;
   }
 }
 
@@ -93,7 +100,7 @@ body {
 .btn-primary {
   font-family: $font-family;
   color: $color-white;
-  border: 2px solid rgba(255, 255, 255, 0.15);
+  border: 2px solid rgba($color-white, 0.15);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -119,7 +126,7 @@ body {
   }
 
   &:focus {
-    outline: 2px solid #8d43ff;
+    outline: 2px solid $color-primary;
     outline-offset: 2px;
   }
 }
@@ -128,7 +135,7 @@ body {
   font-family: $font-family;
   color: $color-white;
   background-color: #1c1f22;
-  border: 2px solid rgba(255, 255, 255, 0.1);
+  border: 2px solid rgba($color-white, 0.1);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -146,7 +153,7 @@ body {
   }
 
   &:focus {
-    outline: 2px solid #8d43ff;
+    outline: 2px solid $color-primary;
     outline-offset: 2px;
   }
 }
