--- a/src/scss/cookie.scss
+++ b/src/scss/cookie.scss
@@ -7,7 +7,7 @@
   transform: translateX(-50%);
   padding: 16px;
   width: 343px;
-  border: 1px solid rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba($color-white, 0.1);
   border-radius: 16px;
   backdrop-filter: blur(30px);
   background: rgba(0, 0, 0, 0.6);
@@ -16,7 +16,7 @@
 
   @include media(desktop) {
     flex-direction: row;
-    border: 1px solid rgba(255, 255, 255, 0.1);
+    border: 1px solid rgba($color-white, 0.1);
     padding: 24px;
     width: 440px;
     left: auto;
