--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,7 +1,7 @@
 @use "./common/index" as *;
 
 .footer {
-  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  border-top: 1px solid rgba($color-white, 0.1);
 }
 
 .footer-container {
@@ -93,7 +93,7 @@
   align-items: center;
   justify-content: center;
 
-  border: 1px solid rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba($color-white, 0.1);
   border-radius: 100px;
   box-shadow: 0 1px 2px 0 rgba(10, 13, 18, 0.05),
     inset 0 -2px 0 0 rgba(10, 13, 18, 0.05),
