--- a/src/scss/our-advantages.scss
+++ b/src/scss/our-advantages.scss
@@ -25,7 +25,7 @@
 }
 
 .advantages-item {
-  border: 1px solid rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba($color-white, 0.1);
   padding: 16px;
   display: flex;
   gap: 10px;
@@ -170,6 +170,8 @@
   border-radius: 100px;
   width: 100%;
   height: 50px;
+  max-width: 400px;
+  margin: 0 auto;
 
   @include media(desktop) {
     font-size: 18px;
