--- a/src/scss/our-goal.scss
+++ b/src/scss/our-goal.scss
@@ -21,7 +21,7 @@
   flex-direction: column;
   gap: 16px;
   background: linear-gradient(0deg, #1c1f22 0%, rgba(28, 31, 34, 0.02) 100%);
-  border: 1px solid rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba($color-white, 0.1);
   border-radius: 12px;
   padding: 24px 16px 0;
 
@@ -32,6 +32,7 @@
     padding: 40px 0px 40px 40px;
   }
 }
+
 .goal-title {
   margin-bottom: 0;
 }
@@ -47,11 +48,22 @@
 }
 
 .goal-wrapper-img {
+  @include media(tablet) {
+    height: 359px;
+    width: 400px;
+    margin: 0 auto;
+  }
+
   @include media(desktop) {
     position: absolute;
     width: 410px;
     bottom: 0;
     right: 0;
     top: auto;
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
